Fix photo resized issue
Yide advices to use object-fit:cover to fix the photo resize issue.
I wanted the photos to be cut instead of stretched.

--- a/public/css/photo.css
+++ b/public/css/photo.css
@@ -8,5 +8,5 @@
   width: 200px;
   height: 200px;
   margin: 0.6rem 0.3rem 0;
-  display: inline;
+  object-fit: cover;
 }
